# EEG_SignalPlotter

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/UABC-FIAD/eeg_signal_reader/: Kconfig  Kconfig.eeg_signal_reader  board.yml  eeg_signal_reader-pinctrl.dtsi  eeg_signal_reader_procpu.dts  eeg_signal_reader_procpu.yaml
dts/bindings/: vendor-prefixes.txt
dts/bindings/adc/: headband,ads1256.yaml
include/: headband_channels.h
src/: main.cpp
src/app/: app_controller.cpp  app_controller.hpp  app_events.cpp  app_events.hpp  app_state.cpp  app_state.hpp
src/drivers/: ads1256.cpp  ads1256.hpp
src/services/: acquisition_service.cpp  acquisition_service.hpp  ble_service.cpp  ble_service.hpp  signal_processing_service.cpp  signal_processing_service.hpp
src/ui/: ui.cpp
src/ui/screens/: README.md
src/ui/xml/: README.md
ui/: globals.xml
ui/components/: channel_legend.xml  eeg_chart_card.xml  quality_chip.xml  status_bar.xml
ui/include/ui/: ui.hpp  ui_events.hpp
ui/screens/: charging.xml  dashboard.xml  pairing.xml
ui/src/: README.md  ui_events.cpp
